--- a/project/featureprioritization/index.html
+++ b/project/featureprioritization/index.html
@@ -630,7 +630,9 @@
   
   <a class="badge badge-light" href="/tags/cognition/">cognition</a>
   
-  <a class="badge badge-light" href="/tags/classification/">classification</a>
+  <a class="badge badge-light" href="/tags/experiment/">experiment</a>
+  
+  <a class="badge badge-light" href="/tags/psychology/">psychology</a>
   
 </div>
 
