--- a/project/homy/index.html
+++ b/project/homy/index.html
@@ -602,6 +602,8 @@ Homy attempts to solve this growing social problem by recreating online home and
   
   <a class="badge badge-light" href="/tags/prototyping/">prototyping</a>
   
+  <a class="badge badge-light" href="/tags/hci/">hci</a>
+  
 </div>
 
 
