--- a/project/yelp/index.html
+++ b/project/yelp/index.html
@@ -627,7 +627,9 @@
   
   <a class="badge badge-light" href="/tags/cognition/">cognition</a>
   
-  <a class="badge badge-light" href="/tags/classification/">classification</a>
+  <a class="badge badge-light" href="/tags/classifier/">classifier</a>
+  
+  <a class="badge badge-light" href="/tags/python/">python</a>
   
 </div>
 
