--- a/project/homy/index.html
+++ b/project/homy/index.html
@@ -684,7 +684,7 @@ Homy attempts to solve this growing social problem by recreating online home and
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://jinjeon.me/">Jin Jeon</a></h5>
-      <h6 class="card-subtitle">M.S. in HCDE (&lsquo;22)</h6>
+      <h6 class="card-subtitle">UX Researcher<br><br> M.S. in HCDE (&lsquo;22)</h6>
       
       <ul class="network-icon" aria-hidden="true">
   
