--- a/project/shadowplay/index.html
+++ b/project/shadowplay/index.html
@@ -266,7 +266,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#about"><span>Jin Jeon's</span></a>
+          <a class="nav-link " href="/#about"><span>Jin Jeon</span></a>
         </li>
 
         
@@ -599,8 +599,6 @@
 
 
 <div class="article-tags">
-  
-  <a class="badge badge-light" href="/tags/highlights/">highlights</a>
   
   <a class="badge badge-light" href="/tags/side-projects/">side-projects</a>
   
