--- a/project/alaska-airlines/index.html
+++ b/project/alaska-airlines/index.html
@@ -522,45 +522,52 @@
     <div class="article-style">
       
 
-<p><body style="font-size:10pt"></body>
-<!-- ![](/pdf/navigating-cancer-resources/deformed-diamond.pdf) --></p>
+<style>
+.introduction {
+  column-count: 2;
+}
+</style>
 
-<h3 id="my-role">My Role</h3>
+<p><body style="font-family:Arial; font-size: 12pt">
+<div class="introduction">
+<b>My Role:</b>
+<br><small>UX researcher in a 4-person team of researchers and designers</small><br><br></p>
 
-<p>UX researcher in a 4-person team of researchers and designers</p>
+<p><b>Methods:</b>
+<br><small>generative research, competitive analysis, remote qualitative interview, journey map, affinity diagram</small><br><br></p>
 
-<h3 id="timeline">Timeline</h3>
+<p><b>Timeline: </b>
+<br><small>June 2020 - Oct 2020 (~4 months)</small><br><br></p>
 
-<p>June 2020 - Oct 2020 (~4 months)</p>
+<p><b>Stakeholders:</b>
+<br><small>Research manager, product designers, <br>brand manager, eCommerce team</small>
+</div></p>
 
-<h3 id="methods">Methods</h3>
+<hr />
 
-<p>Generative Research, Competitive Analysis, Remote Qualitative Interview, Journey Map, Affinity Diagram</p>
+<!-- ![](/pdf/navigating-cancer-resources/deformed-diamond.pdf) -->
 
-<h3 id="stakeholders">Stakeholders</h3>
+<h2 id="overview">Overview</h2>
 
-<p>Research manager, product designers, brand manager, eCommerce team</p>
-
-<!-- ![](./intro.pdf) -->
-
-<h2 id="summary">Summary</h2>
-
-<p>To improve the upselling strategies of Alaska Airlines, we explore users&rsquo; behaviors, motivations and overall experience of Alaska Airlines and its five competitors. Additionally, we study the impact of the current pandemic on their travel experiences.</p>
-
-<p>Our research identifies users&rsquo; top values, pain points, and overarching themes that affect their decision to make additional purchases. We present our findings to multiple stakeholders and conclude with four recommendations that will improve the overall experience and lead to increase in sales.</p>
+<p>To help Alaska Airlines flexibly adapt to the COVID-19 pandemic and improve its upsell strategies, we conducted user research to understand users&rsquo; behaviors, values, and motivations at different stages of their flight travel experiences. We studied Alaska Airlines and five other major airlines operating in the US to conduct competitive analysis and pair insights from user experience benchmarking.</p>
 
 <h2 id="impact">Impact</h2>
 
-<ul>
-<li>The research findings matched with the ongoing research conducted by the company&rsquo;s internal research team.</li>
-<li>Our findings and key recommendations were presented to multiple internal stakeholders.</li>
-</ul>
+<p>We presented four recommendations to research managers, product and eCommerce teams. Some of the research findings matched with the ongoing research that was being conducted internally within the company, suggesting the validity of research. Other recommendations provide new insights to improve users&rsquo; overall experience by adapting to the pandemic world.</p>
 
 <!-- ![](./designquestion.svg) -->
 
-<h2 id="design-question">Design Question:</h2>
+<h2 id="research-question">Research Question</h2>
 
-<p>What are the motivations for upgrading throughout the booking and overall flight experience with Alaska and its competitors? Additionally, has the current pandemic affected this experience?</p>
+<blockquote>
+<p><p style="font-size: 16pt"><mark><em>&ldquo;What are the motivations for upgrading throughout the booking and overall flight experience with Alaska and its competitors? Additionally, has the current pandemic affected this experience?&rdquo;</em></mark><br><br></p>
+</blockquote>
+
+<hr />
+
+<h1 id="below-are-under-construction">BELOW ARE UNDER CONSTRUCTION.</h1>
+
+<h1 id="please-visit-back">PLEASE VISIT BACK!</h1>
 
 <p><img src="./journey.svg" alt="" /></p>
 
@@ -593,6 +600,8 @@
 <p><img src="./rec2.svg" alt="" /></p>
 
 <hr />
+
+<p></body></p>
 
     </div>
 
