--- a/project/alaska-airlines/index.html
+++ b/project/alaska-airlines/index.html
@@ -702,7 +702,7 @@ We conducted a total of 30 interviews (5 participants from 6 different airlines)
 <p><li><b>Interactive Journey Maps:</b><br>
 We incorporated an <strong>interactive journey map</strong> session in each interview to have participants walkthrough their most recent experience and capture their moment-to-moment emotions and actions.</li></p>
 
-<p>To capture their moment-to-moment emotions and actions, we divided the entire flight experience into four phases:
+<p>To capture their moment-to-moment emotions and actions, we divided the entire flight experience into 5 phases:
 <ol>
 <li><strong>booking the flight ticket</strong> (e.g. web vs. mobile vs. phone)</li>
 <li><strong>before 24 hours of travel</strong> (includes preparation and traveling to the airport)</li>
@@ -1050,12 +1050,15 @@ We incorporated an <strong>interactive journey map</strong> session in each inte
 
 <hr />
 
-<h2 id="limitations">Limitations</h2>
+<h2 id="limitations-lessons-learned">Limitations &amp; Lessons Learned</h2>
 
 <ol>
 <li><p>The participants were not racially diverse as recruitment of participants were automatically done via UserTesting.com.</p></li>
 
-<li><p>Majority of participants&rsquo; recent travels occured 6 months ago, in which they may have distorted memory of their travel experiences.</p></li>
+<li><p>Majority of participants&rsquo; recent travels occurred 6 months ago, in which they may have distorted memory of their travel experiences.</p></li>
+
+<li><p>In a qualitative research, it&rsquo;s more about finding about the big buckets &amp; themes unlike a quant research. <br>
+When presenting the different demographic groups, it can be as easy as describing &ldquo;we examined a wide income group&rdquo; instead of graphing out all the different income groups. If all the demographic information was graphically presented, it can convey the different stakeholders, esp. data scientists, that the results and insights will be quant focused when the research is actually qualitative.</p></li>
 </ol>
 
 
