--- a/project/navigating-cancer/index.html
+++ b/project/navigating-cancer/index.html
@@ -543,23 +543,510 @@
 <br><small>product manager, senior designer, clinicians, patients</small>
 </div></p>
 
-<h1 id="currently-under-construction-please-visit-back">Currently under construction. Please visit back!</h1>
+<h2 id="overview">Overview</h2>
 
-<p>In summer 2020, I had a chance to work with the health tracker team at Navigating Cancer, a company that is devoted to enhancing the patient relationship management for cancer patients. During the weird time of COVID, the research team was working remotely as an international team with each of us in different time zones. I was also flying around being in the US and in my hometown Korea.</p>
+<p>To improve patients&rsquo; experiences with symptom management and engagement with the health tracker, the team conducted <strong>user research to identify needs</strong>, <strong>concept-tested prototypes</strong>, and <strong>delivered a high-fidelity prototype</strong> to the leaders and multiple stakeholders.
+<br><strong>+ With COVID-19</strong>, the team was working remotely as an international, cross-functional team with each of us in different time zones. I was also flying around being in the US and my hometown Korea, making the project more dynamic!</p>
 
-<h2 id="the-design-process">The Design Process</h2>
+<h2 id="impact">Impact</h2>
 
-<p>We used design thinking framework to help us guide our research focus by better framing the problem and solving the users’ underlying needs.We adapted the double-diamond model, which maps the divergent and convergent stages of the design process. The model is divided into 4 phases (discover, define, develop, and deliver). We begin by exploring the users’ problem space through various research. Then we narrow down to defining the user needs. At the developing phase, we would build prototypes and deliver to the end users to test the product.</p>
+<ul>
+<li>Presented research findings and 4 major feature recommendations to leaders and multiple stakeholders.</li>
+<li>Received strong positive feedbacks from the stakeholders, and recommendations aligned with company&rsquo;s future milestones.</li>
+</ul>
 
-<p><img src="/pdf/navigating-cancer-resources/double-diamond.pdf" alt="" /></p>
+<h2 id="research-question">Research Question</h2>
 
-<p>While the ideal model is a perfectly-shaped two diamonds, the reality of our journey was rather a deformed diamond process. As we had to go back-and-forth within each phase, we had multiple pivots, which ended up being a valuable process as we gained greater insights to the problem space.</p>
-
-<p><img src="/pdf/navigating-cancer-resources/deformed-diamond.pdf" alt="" /></p>
+<blockquote>
+<p><p style="font-size: 16pt"><mark><em>&ldquo;How might we increase patient engagement with health tracker?&rdquo;</em></mark><br><br></p>
+</blockquote>
 
 <hr />
 
-<p><br></p>
+<h2 id="the-design-process">The Design Process</h2>
+
+<h3 id="unfolding-the-research-through-design-framework">Unfolding the Research through Design Framework</h3>
+
+<p>Part of our team&rsquo;s mission was to <strong>evangelize the impact of research</strong> as the company lacked a dedicated research team. We incorporated the <a href="https://www.designcouncil.org.uk/news-opinion/what-framework-innovation-design-councils-evolved-double-diamond" target="_blank">Double Diamond</a> design framework to help us guide our research focus by better framing the problem and solving the users&rsquo; underlying needs.</p>
+
+<p><mark>This case study will unfold along with the different stages of the Double Diamond.</mark></p>
+
+<h3 id="the-ideal-double-diamond">The Ideal Double Diamond</h3>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure>
+
+
+  <a data-fancybox="" href="doublediamond.png" data-caption="The ideal double diamond. Design frameworks help organize the design thinking process by helping researchers better frame the problem and focus on identifying and solving the users’ underlying needs.The model, divided into 4 phases (discover, define, develop, and deliver), maps the divergent and convergent stages of the design process.">
+<img src="doublediamond.png" alt="" width="full" ></a>
+
+
+  
+  
+  <figcaption>
+    <b>The ideal double diamond. Design frameworks help organize the design thinking process by helping researchers better frame the problem and focus on identifying and solving the users’ underlying needs.<br>The model, divided into 4 phases (discover, define, develop, and deliver), maps the divergent and convergent stages of the design process.</b>
+  </figcaption>
+
+
+</figure>
+
+
+<h4 id="but-the-reality">but the Reality&hellip;</h4>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure>
+
+
+  <a data-fancybox="" href="reality.png" data-caption="The deformed double diamond. While the ideal model is a perfectly-shaped two diamonds, the reality of our research journey was a deformed diamond process. We made multiple pivots along the research, which ended up being a valuable process as we gained greater insights to the problem space.">
+<img src="reality.png" alt="" width="full" ></a>
+
+
+  
+  
+  <figcaption>
+    <b>The deformed double diamond. While the ideal model is a perfectly-shaped two diamonds, the reality of our research journey was a deformed diamond process. We made multiple pivots along the research, which ended up being a valuable process as we gained greater insights to the problem space.</b>
+  </figcaption>
+
+
+</figure>
+
+
+<hr />
+
+<h2 id="user-research">User Research</h2>
+
+<p>Please note that below are <strong><em>summarized insights</em></strong> our team had during the user research process.</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure>
+
+
+  <a data-fancybox="" href="user_research.png" data-caption="Click to see in large view  Overall high-level research process. We began our research with a general survey. From the insights from the general survey and existing survey results from the company, we conducted interviews with cancer patients and survivors.">
+<img src="user_research.png" alt="" width="full" ></a>
+
+
+  
+  
+  <figcaption>
+    <strong>Click to see in large view</strong> <br> <strong>Overall high-level research process.</strong> We began our research with a general survey. From the insights from the general survey and existing survey results from the company, we conducted interviews with cancer patients and survivors.
+  </figcaption>
+
+
+</figure>
+
+
+<hr />
+
+<h3 id="mark-discover-mark"><mark>Discover</mark></h3>
+
+<ul>
+<li>We initiated our research with a general survey sent out online (n=72) to understand the general space of health care and health trackers. It helped us <strong>identify people&rsquo;s health goals and tracking habits.</strong></li>
+<li>From the general survey results, we devised a remote moderated <strong>interview plan to better understand what it feels like to undergo cancer treatments and how they manage their symptoms.</strong></li>
+<li>From the interview with cancer patients and survivors, <strong>affinity mapping helped us categorize their responses</strong> into various sections, such as their emotions throughout the oncology journey, how they track and manage their symptoms, interaction with the care team and caregivers, and so on.</li>
+</ul>
+
+<h4 id="key-insights">Key Insights</h4>
+
+<p>Interview with the patients and survivors shed light to clearly understand not just how they manage their symptoms, but <strong>empathize with their adjusted lifestyles and daily challenges.</strong></p>
+
+<ul>
+<li>Cancer oncology treatments were perceived as <strong>long &ldquo;journeys&rdquo;</strong> even sometimes with no end.</li>
+<li><strong>Symptom management varies by each individual, severity, and cancer types.</strong> As a researcher and designer, another design challenge was how we can deliver a solution that addresses all cancer types and patients.</li>
+</ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure>
+
+
+  <a data-fancybox="" href="discover.svg" data-caption="Click to see large view. ">
+<img src="discover.svg" alt="" width="full" ></a>
+
+
+  
+  
+  <figcaption>
+    <b>Click to see large view. </b>
+  </figcaption>
+
+
+</figure>
+
+
+<hr />
+
+<h3 id="mark-define-mark"><mark>Define</mark></h3>
+
+<p>Below are only partial insights synthesized.<br></p>
+
+<p>💡 <strong>Key Insight:</strong></p>
+
+<ul>
+<li><p>Identifying the user needs and listing out the stories in a prioritized order immensely helped the team properly guide to the next steps.</p></li>
+
+<li><p>We synthesized potential features that would address the user needs.</p></li>
+</ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure>
+
+
+  <a data-fancybox="" href="define.svg" data-caption="User Stories. These are partial high-level user stories synthesized from the research. ">
+<img src="define.svg" alt="" width="full" ></a>
+
+
+  
+  
+  <figcaption>
+    <b>User Stories. These are partial high-level user stories synthesized from the research. </b>
+  </figcaption>
+
+
+</figure>
+
+
+<hr />
+
+<h3 id="mark-develop-mark"><mark>Develop </mark></h3>
+
+<p>💡 <strong>Key Insights:</strong><br></p>
+
+<ul>
+<li><p>With my background in data visualization, <strong>I was particularly fascinated in developing visual dashboards and data visualization to help patients track their symptoms.</strong></p></li>
+
+<li><p>One key lesson I learned was: <mark><strong>Designing should always consider the target audience first.</strong></mark></p>
+
+<ul>
+<li>Excited to develop data visualization screens, <strong>I initially thought that the more diverse, interactive, and comprehensive graphs are, the better.</strong></li>
+<li>Nevertheless, during the expert evaluation and concept-testing, I realized that the screens were simply too busy and users (particularly the old population that are less tech savvy) find the <strong>visuals to be too complicated and less informative.</strong></li>
+</ul></li>
+</ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure>
+
+
+  <a data-fancybox="" href="develop.svg" data-caption="Click to see in large view.  Developing prototypes. We began our development with quick sketches using Google&rsquo;s Crazy 8&rsquo;s methodology. We used Figma to develop into a high-fidelity prototypes, which were later concept-tested in the deliver phase ">
+<img src="develop.svg" alt="" width="full" ></a>
+
+
+  
+  
+  <figcaption>
+    <b>Click to see in large view. <br> Developing prototypes. We began our development with quick sketches using Google&rsquo;s Crazy 8&rsquo;s methodology. We used Figma to develop into a high-fidelity prototypes, which were later concept-tested in the deliver phase </b>
+  </figcaption>
+
+
+</figure>
+
+
+<h4 id="concept-testing">Concept-testing</h4>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure>
+
+
+  <a data-fancybox="" href="concept_test.svg" data-caption="We conducted concept-testing with 8 users, and organized by each participant. We then categorized by themes and features. ">
+<img src="concept_test.svg" alt="" width="full" ></a>
+
+
+  
+  
+  <figcaption>
+    <b>We conducted concept-testing with 8 users, and organized by each participant. We then categorized by themes and features. </b>
+  </figcaption>
+
+
+</figure>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure>
+
+
+  <a data-fancybox="" href="concept_test2.svg" data-caption="Concept-testing helped us narrow down our scope, and focus on key 3 areas, and specifically 4 feature design recommendations. ">
+<img src="concept_test2.svg" alt="" width="full" ></a>
+
+
+  
+  
+  <figcaption>
+    <b>Concept-testing helped us narrow down our scope, and focus on key 3 areas, and specifically 4 feature design recommendations. </b>
+  </figcaption>
+
+
+</figure>
+
+
+<hr />
+
+<h3 id="mark-deliver-mark-design-recommendations"><mark>Deliver</mark> (Design Recommendations)</h3>
+
+<p>** <strong>Disclaimer: Below displays only 2 of the total 4 final design recommendations</strong> **</p>
+
+<p>In order to ensure that our design solutions stem to delivering the actual user needs, we explicitly stated the user needs that are being met with each design recommendation.</p>
+
+<h4 id="1-dashboard-and-data-visualization"><strong>1. Dashboard and Data Visualization</strong></h4>
+
+<p>Personalized dashboard provides a way to effectively track users&rsquo; past symptoms and even compare and predict how they would feel in the next few days.
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure>
+
+
+  <a data-fancybox="" href="feature-1.svg" >
+<img src="feature-1.svg" alt="" width="full" ></a>
+
+
+
+</figure>
+</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure>
+
+
+  <a data-fancybox="" href="feature-1.1.svg" >
+<img src="feature-1.1.svg" alt="" width="full" ></a>
+
+
+
+</figure>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure>
+
+
+  <a data-fancybox="" href="feature-1.2.svg" >
+<img src="feature-1.2.svg" alt="" width="full" ></a>
+
+
+
+</figure>
+
+
+<h4 id="2-journal"><strong>2. Journal</strong></h4>
+
+<p>Journal feature lets users record their symptoms through various means. <strong>Considering accessibility and finger &ldquo;tickling&rdquo; &amp; &ldquo;numbness&rdquo; being a common symptom of cancer, we include voice memo, photo upload, and emotion scale</strong> to faciliate their input.</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure>
+
+
+  <a data-fancybox="" href="feature-2.svg" >
+<img src="feature-2.svg" alt="" width="full" ></a>
+
+
+
+</figure>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure>
+
+
+  <a data-fancybox="" href="feature-2.1.svg" >
+<img src="feature-2.1.svg" alt="" width="full" ></a>
+
+
+
+</figure>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure>
+
+
+  <a data-fancybox="" href="feature-2.2.svg" >
+<img src="feature-2.2.svg" alt="" width="full" ></a>
+
+
+
+</figure>
+
+
+<p>To learn more about this project, please reach out to me!</p>
+
+<hr />
+
+<h2 id="reflections">Reflections</h2>
+
+<ol>
+<li><p>Interviewing minorities and patients could be overwhelming at first. I thought I needed to know all the jargons related to cancer and oncology treatments. While it would be great to know all these details, acknowledging that you are &ldquo;learning&rdquo; in this space and trying to hear more from interviewees&rsquo; experience not only helps lighten the atmosphere but also gives patients more confidence.</p></li>
+
+<li><p>User centered design approach is critical: For designing data visualizations, more comprehensive data, interaction, and fancy features do not translate to happy experience.</p></li>
+
+<li><p>There are fine lines of products requiring FDA approval, and fortunately, this project did not require it.</p></li>
+</ol>
+
+<hr />
 
     </div>
 
