--- a/project/data-viz/index.html
+++ b/project/data-viz/index.html
@@ -522,9 +522,15 @@
     <div class="article-style">
       
 
-<h1 id="currently-under-development">Currently under development</h1>
+<h2 id="interactive-art-image-reconstruction-using-perlin-noise-p5-js-javascript">Interactive Art: Image Reconstruction using Perlin Noise (p5.js Javascript)</h2>
 
-<p></div><iframe src="https://editor.p5js.org/jeon11/embed/w2Ugnl4dR" width="760" height="600">Image Reconstruction using Perlin Noise</iframe></p>
+<p></div><iframe src="https://editor.p5js.org/jeon11/embed/w2Ugnl4dR" width="760" height="600">Image Reconstruction using Perlin Noise (Javascript- p5.js) </iframe></p>
+
+<p>The image above uses Perlin Noise to reconstruct old classic artworks, which is useful for generating patterns. Starting from a blank screen, it creates thousands of random noises that start recovering the image. They do so by reading the color of the image coordinates. The noises diffuse by generating random polygons spreading around, filling in the gap. There are total of four images that are randomly chosen at the beginning. Feel free to refresh to see how different images are created.</p>
+
+<p>Dragging the mouse will draw circles on top of the default loop to recover the image closer to the original.</p>
+
+<h2 id="page-is-currently-under-development">Page is currently under development</h2>
 
 <hr />
 
