--- a/project/navigating-cancer/index.html
+++ b/project/navigating-cancer/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="**//Currently under construction//**&lt;br&gt;Conducted user research to identify problems &amp; recommended features to enhance the symptom management experience">
+  <meta name="description" content="Conducted user research to identify problems &amp; recommended features to enhance the health tracker">
 
   
   <link rel="alternate" hreflang="en-us" href="https://jinjeon.me/project/navigating-cancer/">
@@ -112,7 +112,7 @@
   <meta property="og:site_name" content="Jin Jeon">
   <meta property="og:url" content="https://jinjeon.me/project/navigating-cancer/">
   <meta property="og:title" content="Navigating Cancer (NDA) | Jin Jeon">
-  <meta property="og:description" content="**//Currently under construction//**&lt;br&gt;Conducted user research to identify problems &amp; recommended features to enhance the symptom management experience"><meta property="og:image" content="https://jinjeon.me/project/navigating-cancer/featured.png">
+  <meta property="og:description" content="Conducted user research to identify problems &amp; recommended features to enhance the health tracker"><meta property="og:image" content="https://jinjeon.me/project/navigating-cancer/featured.png">
   <meta property="twitter:image" content="https://jinjeon.me/project/navigating-cancer/featured.png"><meta property="og:locale" content="en-us">
   
     
@@ -166,7 +166,7 @@
       "url": "https://jinjeon.me/img/icon.png"
     }
   },
-  "description": "**//Currently under construction//**\u003cbr\u003eConducted user research to identify problems \u0026 recommended features to enhance the symptom management experience"
+  "description": "Conducted user research to identify problems \u0026 recommended features to enhance the health tracker"
 }
 </script>
 
