--- a/project/data-viz/index.html
+++ b/project/data-viz/index.html
@@ -522,6 +522,8 @@
     <div class="article-style">
       
 
+<p><body style="font-family:Arial; font-size: 12pt"></p>
+
 <h2 id="interactive-art-image-reconstruction-using-perlin-noise-p5-js-javascript">Interactive Art: Image Reconstruction using Perlin Noise (p5.js Javascript)</h2>
 
 <p></div><iframe src="https://editor.p5js.org/jeon11/embed/w2Ugnl4dR" width="760" height="600">Image Reconstruction using Perlin Noise (Javascript- p5.js) </iframe></p>
@@ -534,7 +536,8 @@
 
 <hr />
 
-<p><br></p>
+<p><br>
+</body></p>
 
     </div>
 
