--- a/project/alaska-airlines/index.html
+++ b/project/alaska-airlines/index.html
@@ -1000,14 +1000,14 @@ We incorporated an <strong>interactive journey map</strong> session in each inte
 <figure>
 
 
-  <a data-fancybox="" href="design_rec1.svg" data-caption="Click to see in a large view/ We added a devoted section that clearly communicates what services are currently suspended especially due to COVID (e.g. in-flight food &amp; beverages). When a user is expecting quality in-flight service but does not receive it, the experience cannot be reverted">
+  <a data-fancybox="" href="design_rec1.svg" data-caption="Click to see in large view/ We added a devoted section that clearly communicates what services are currently suspended especially due to COVID (e.g. in-flight food &amp; beverages). When a user is expecting quality in-flight service but does not receive it, the experience cannot be reverted">
 <img src="design_rec1.svg" alt="" width="full" ></a>
 
 
   
   
   <figcaption>
-    <strong>Click to see in a large view</strong>/ We added a devoted section that clearly communicates what services are currently suspended especially due to COVID (e.g. in-flight food &amp; beverages). When a user is expecting quality in-flight service but does not receive it, the experience cannot be reverted
+    <strong>Click to see in large view</strong>/ We added a devoted section that clearly communicates what services are currently suspended especially due to COVID (e.g. in-flight food &amp; beverages). When a user is expecting quality in-flight service but does not receive it, the experience cannot be reverted
   </figcaption>
 
 
@@ -1032,14 +1032,14 @@ We incorporated an <strong>interactive journey map</strong> session in each inte
 <figure>
 
 
-  <a data-fancybox="" href="design_rec2.svg" data-caption="Click to see in a large view/ Communicating what an upgraded seat entails provide transparency and facilitates the upgrading decision.">
+  <a data-fancybox="" href="design_rec2.svg" data-caption="Click to see in large view/ Communicating what an upgraded seat entails provide transparency and facilitates the upgrading decision.">
 <img src="design_rec2.svg" alt="" width="full" ></a>
 
 
   
   
   <figcaption>
-    <strong>Click to see in a large view</strong>/ Communicating what an upgraded seat entails provide transparency and facilitates the upgrading decision.
+    <strong>Click to see in large view</strong>/ Communicating what an upgraded seat entails provide transparency and facilitates the upgrading decision.
   </figcaption>
 
 
