--- a/project/navigating-cancer/index.html
+++ b/project/navigating-cancer/index.html
@@ -686,6 +686,7 @@
 <p>Interview with the patients and survivors shed light to clearly understand not just how they manage their symptoms, but <strong>empathize with their adjusted lifestyles and daily challenges.</strong></p>
 
 <ul>
+<li><strong>Through quantitative analysis of the self-reported metrics, I identified that &ldquo;older people&rsquo;s self perception of health level is higher than that of younger people&rdquo;</strong></li>
 <li>Cancer oncology treatments were perceived as <strong>long &ldquo;journeys&rdquo;</strong> even sometimes with no end.</li>
 <li><strong>Symptom management varies by each individual, severity, and cancer types.</strong> As a researcher and designer, another design challenge was how we can deliver a solution that addresses all cancer types and patients.</li>
 </ul>
