--- a/project-archives/yelp/index.html
+++ b/project-archives/yelp/index.html
@@ -742,7 +742,7 @@
     <h3>Related</h3>
     <ul>
       
-      <li><a href="/project/homy/">Homy, Private Social Network for Families</a></li>
+      <li><a href="/project/homy/">Homy, private social network for families</a></li>
       
     </ul>
   </div>
