--- a/project/alaska-airlines/index.html
+++ b/project/alaska-airlines/index.html
@@ -808,9 +808,9 @@ We incorporated an <strong>interactive journey map</strong> session in each inte
 
 <h3 id="personas-highlights">Personas/Highlights</h3>
 
-<p>We developed three prototypical personas (<strong>we intentionally used the term &ldquo;highlight&rdquo; instead of &ldquo;persona&rdquo; because they were modeled after participants that stood out with clear preference of values and motivations</strong>). We introduced the demographic information, a hypothetical trip destination, quote from the interview, means used to book and upgrade the seat. We also identified top values, pain points, and motivations for upgrading a seat.</p>
+<p>We developed three prototypical personas (<strong>we intentionally used the term &ldquo;highlight&rdquo; instead of &ldquo;persona&rdquo; because they were modeled after participants that stood out with clear preference of values and motivations</strong>). We introduced the demographic information, a hypothetical trip destination, quote from the interview, means used to book and upgrade the seat. We also identified top values, pain points, and motivations for upgrading a seat. Only 1 of the 3 is shown here.</p>
 
-
+<!-- 
 
 
 
@@ -838,9 +838,9 @@ We incorporated an <strong>interactive journey map</strong> session in each inte
 
 
 </figure>
+ -->
 
-
-
+<!-- 
 
 
 
@@ -868,7 +868,7 @@ We incorporated an <strong>interactive journey map</strong> session in each inte
 
 
 </figure>
-
+ -->
 
 
 
@@ -886,14 +886,14 @@ We incorporated an <strong>interactive journey map</strong> session in each inte
 <figure>
 
 
-  <a data-fancybox="" href="persona3.svg" data-caption="This last person is characterized as a bargain hunter, constantly looking for deals and offers. The person is unique in that he is tech savvy and even conscious about which aircraft type he would be flying in.">
+  <a data-fancybox="" href="persona3.svg" data-caption="This person is characterized as a bargain hunter, constantly looking for deals and offers. The person is unique in that he is tech savvy and even conscious about which aircraft type he would be flying in.">
 <img src="persona3.svg" alt="" width="full" ></a>
 
 
   
   
   <figcaption>
-    <b>This last person is characterized as a bargain hunter, constantly looking for deals and offers. The person is unique in that he is tech savvy and even conscious about which aircraft type he would be flying in.</b>
+    <b>This person is characterized as a <i>bargain hunter</i>, constantly looking for deals and offers. The person is unique in that he is tech savvy and even conscious about which aircraft type he would be flying in.</b>
   </figcaption>
 
 
@@ -918,14 +918,14 @@ We incorporated an <strong>interactive journey map</strong> session in each inte
 <figure>
 
 
-  <a data-fancybox="" href="journeymap.svg" data-caption="We visualized a typical journey map, capturing the different motivations for upgrading a seat at each stage of travel. We identified values, emotions, and quotes. ">
+  <a data-fancybox="" href="journeymap.svg" data-caption="An overall experience of Airline X: We visualized a typical journey map, capturing the different motivations for upgrading a seat at each stage of travel. We identified values, emotions, and quotes.">
 <img src="journeymap.svg" alt="" width="full" ></a>
 
 
   
   
   <figcaption>
-    <b>We visualized a typical journey map, capturing the different motivations for upgrading a seat at each stage of travel. We identified values, emotions, and quotes. </b>
+    <b>An overall experience of Airline X:</b> <br>We visualized a typical journey map, capturing the different motivations for upgrading a seat at each stage of travel. We identified values, emotions, and quotes.
   </figcaption>
 
 
@@ -955,28 +955,31 @@ We incorporated an <strong>interactive journey map</strong> session in each inte
 <figure>
 
 
-  <a data-fancybox="" href="recommendations.svg" data-caption="Our high-level summaries of the four recommendations">
+  <a data-fancybox="" href="recommendations.svg" data-caption="The four high level recommendations">
 <img src="recommendations.svg" alt="" width="full" ></a>
 
 
   
   
   <figcaption>
-    Our high-level summaries of the four recommendations
+    <b>The four high level recommendations</b>
   </figcaption>
 
 
 </figure>
 </p>
 
-<p>💡 <strong>Key/fun Fact:</strong><br>
+<p>💡 <strong>Key/Fun Fact:</strong><br>
 <ol>
-<li><strong>TRANSPARENCY MATTERS</strong>: it is a critical factor in the overall experience especially due to COVID. For example, users desire clear communication on what services and ancillaries to expect when flying during this pandemic era.</li>
-  <li>metrics, such as <strong>time to complete a booking</strong>, are <strong>less important</strong> than <strong>transparency</strong></li>
-<li>Transparency is important because it translates to expectations. When expectations are not met, the overall experience worsens. </li>
-<li>Clear communication on what each seat upgrade entails can entice users. <br>e.g. <strong>&ldquo;upgrading a seat will get you a 7-inch wider leg room&rdquo;</strong>. </li>
-<li><strong>Users don&rsquo;t mind receiving few more notifications</strong> for clarifying and communicating the travel information (especially if contains deals). </li>
-</ol></p>
+<li><strong>TRANSPARENCY MATTERS</strong>: it is a critical factor in the overall experience especially due to COVID. Users desire clear communication on what services and ancillaries to expect when flying during this pandemic era.</li></p>
+
+<ul>
+<li>Quantitative metrics, such as <strong>time to complete a booking</strong>, are <strong>less important</strong> than <strong>transparency</strong>.</li>
+<li>Transparency translates to expectations. When expectations are not met, the overall experience worsens.</li>
+<li>Clear communication on what each seat upgrade entails can entice users. <br>e.g. <strong>&ldquo;upgrading a seat will get you a 7-inch wider leg room&rdquo;</strong>.
+<!-- <li>**Users don't mind receiving few more notifications** for clarifying and communicating the travel information (especially if contains deals). </li> -->
+</ol></li>
+</ul>
 
 <h3 id="design-recommendations">Design Recommendations</h3>
 
