--- a/project-archives/yelp/index.html
+++ b/project-archives/yelp/index.html
@@ -725,7 +725,7 @@
     <h3>Related</h3>
     <ul>
       
-      <li><a href="/project/homy/">Homy, private social network for families</a></li>
+      <li><a href="/project-archives/homy/">Homy, private social network for families</a></li>
       
     </ul>
   </div>
