--- a/project/alaska-airlines/index.html
+++ b/project/alaska-airlines/index.html
@@ -1110,6 +1110,14 @@ When presenting the different demographic groups, it can be as easy as describin
   
   <a class="badge badge-light" href="/tags/research/">research</a>
   
+  <a class="badge badge-light" href="/tags/preliminary-research/">preliminary-research</a>
+  
+  <a class="badge badge-light" href="/tags/interview/">interview</a>
+  
+  <a class="badge badge-light" href="/tags/affinity-diagrams/">affinity-diagrams</a>
+  
+  <a class="badge badge-light" href="/tags/journey-mapping/">journey-mapping</a>
+  
 </div>
 
 
