--- a/project/navigating-cancer/index.html
+++ b/project/navigating-cancer/index.html
@@ -557,7 +557,8 @@
 <h2 id="h-style-font-family-georgia-impact-h"><h style="font-family:georgia"> Impact </h></h2>
 
 <ul>
-<li><strong>Delivered research findings and 4 major feature recommendations</strong> to leaders and multiple stakeholders.</li>
+<li><strong>Delivered research findings and 4 major feature recommendations</strong> to leaders and multiple stakeholders, including CEO, product team, and designers.</li>
+<li>Evangelized the impact of research through adaptation of design framework throughout the research process.</li>
 <li>Received <strong>strong positive feedbacks</strong> from the stakeholders, and recommendations aligned with company&rsquo;s future milestones.</li>
 </ul>
 
