--- a/project/sap/index.html
+++ b/project/sap/index.html
@@ -572,7 +572,7 @@
 <li><strong>Set the foundation</strong> for the next stage of the design process which involves ideation and concept testing.</li>
 </ul>
 
-<h2 id="h-style-font-family-georgia-research-question-h"><h style="font-family:georgia"> Research Question </h></h2>
+<h2 id="h-style-font-family-georgia-research-questions-h"><h style="font-family:georgia"> Research Questions </h></h2>
 
 <blockquote>
 <p><p style="font-size: 16pt"><mark><em>&ldquo;What are the different use cases that involve comparing data in sourcing?&rdquo;<br><br>
@@ -662,7 +662,7 @@
 
 <ul>
 <li>Examined 5+ past research work and findings, and <strong>organized into an affinity map to identify knowledge gaps.</strong></li>
-<li>Studies were from 2018-2019, involving evaluative research, testing design iterations and concepts. <strong>Because past work often dealt with specific design concepts, it was difficult to generalize findings across different studies.</strong></li>
+<li>Studies were from 2018-2019, involving evaluative research, testing design iterations and concepts. <strong>Because past work all dealt with specific design concepts and evaluative research, it was difficult to generalize findings across different studies.</strong></li>
 <li>Lot of data was missing or not as well organized.</li>
 </ul>
 
@@ -856,7 +856,7 @@
 </ul></li>
 </ul>
 
-<h3 id="example-of-journey-map-1-redacted">Example of Journey Map #1 (Redacted):</h3>
+<h3 id="example-of-journey-map-1-of-3-redacted">Example of Journey Map #1 of 3 (Redacted):</h3>
 
 
 
