--- a/project/wa-notify/index.html
+++ b/project/wa-notify/index.html
@@ -545,7 +545,7 @@
 <br><small>Jan 2021 - March 2021 (~10 week graduate course project)</small><br><br></p>
 
 <p><b><h style="font-family:georgia">Stakeholders:</h></b>
-<br><small> Apple/Google program managers, WA DOH, UW professor and research unit, designers </small>
+<br><small> Apple/Google program managers, WA DOH, UW professor and research lab, designers </small>
 </div></p>
 
 <hr />
@@ -585,7 +585,7 @@
 <h2 id="h-style-font-family-georgia-impact-h"><h style="font-family:georgia"> Impact </h></h2>
 
 <ul>
-<li>The project was spotlighted in our HCDE program&rsquo;s <a href="https://www.hcde.washington.edu/news/hcde-students-work-with-wa-department-of-health-to-study-covid–19-exposure-notification-app" target="_blank">website newsletter</a>.</li>
+<li>The project was spotlighted in HCDE department&rsquo;s <a href="https://www.hcde.washington.edu/news/hcde-students-work-with-wa-department-of-health-to-study-covid–19-exposure-notification-app" target="_blank"> <strong>website newsletter</strong></a></li>
 <li><strong>Ensured research deliverables meet the stakeholders&rsquo; expectations</strong> by checking in weekly since the planning stage.</li>
 <li><strong>Provided prioritized list of recommendations</strong> for the three areas of focus, and assessed the experience gaps between the OS to the stakeholders.</li>
 </ul>
