--- a/project/navigating-cancer/index.html
+++ b/project/navigating-cancer/index.html
@@ -1084,6 +1084,8 @@
   
   <a class="badge badge-light" href="/tags/heuristic-evaluation/">heuristic-evaluation</a>
   
+  <a class="badge badge-light" href="/tags/data-visualization/">data-visualization</a>
+  
 </div>
 
 
@@ -1260,6 +1262,15 @@
 
 
   
+  
+  <div class="article-widget content-widget-hr">
+    <h3>Related</h3>
+    <ul>
+      
+      <li><a href="/project/data-viz/">Statistical Analysis &amp; Data Visualization</a></li>
+      
+    </ul>
+  </div>
   
 
 
